First set of changes for 18-1 issue, Apr.2022.

--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -27,7 +27,7 @@
 
 %\begin{minipage}{\columnwidth}
 
-\address{Richard Lodge\\
+\address{Chris McGuffin\\
 Director, President\\
 \email{president@projectnorthstar.ca}}
 
@@ -38,11 +38,14 @@ Director, Vice President}\\
 Director, Corporate Secretary, NStar Chronicle Editor\\
 \email{editor@projectnorthstar.ca}}
 
+\address{Richard Lodge\\
+Director}\\
+
 \address{Phil Chrysler\\
 Director, Merchandise}\\
 
-\address{Chris McGuffin\\
-Director, Social Media}\\
+%\address{Chris McGuffin\\
+%Director, Social Media}\\
 
 \address{Drew Hodge\\
 Director, Website}\\
