Updated for final May 2022 issue.

--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -34,7 +34,7 @@ Director, President\\
 \address{Garry Dupont\\
 Director, Vice President}\\
 
-\address{Roger Buttom\\
+\address{Roger Button\\
 Director, Corporate Secretary, NStar Chronicle Editor\\
 \email{editor@projectnorthstar.ca}}
 
