--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -16,27 +16,19 @@
 
 \vspace{12pt}
 
-Unfortunately COVID-19 and its restrictions continue to hamper the restoration
-of the North Star. So it's a good time to look at what has been accomplished to
-date by the restoration team which consists of both Museum staff and volunteers.
-This edition will continue the focus on the Merlin engines. As many of you know
-many of the volunteers are also members of our organization.
-
-You will find photos of some of those volunteers in the technical article on
-engines three and four. You will also find a interview with Garry Dupont who has
-had a leading role in the engine shop work.
-
-In the next edition we expect to have more articles about our members
-experiences in the restoration project.
-
-In the meantime if you have any comments on this edition or suggestions for
-future editions please send them to me.
+This edition marks a change of leadership of our association. Richard Lodge, our longtime president, retired at the end of 2021. His replacement is Chris McGuffin. Richard's reminiscences of his time as president can be found in the Our Members column.  While Richard's story talks about his past experiences, Chris' Notes from the President sets out his vision for the future of the organization. R\'{e}jean Demers, CASM's Project Manger for the North Star also addresses, in the Conservator's Corner column,  how he envisages the Project restarting this year.  Finally, there is a fascinating article by John Makadi and Christ McGuffin about how they found and acquired an APS 42 radar unit for the aircraft. Good reading. 
 
 \vspace{12pt}
 
+\noindent As always comments and suggestions for future editions are welcomed.
 
 \begin{footnotesize} \raggedleft PNSAC\\
 \end{footnotesize}
+
+\vspace{60pt}
+
+
+
 
 \begin{multicols}{2}
 
