--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -12,7 +12,7 @@
 
 % \paragraph*{Engine 3}
 
-\textit{The article below was written by our members John Makadi and Chris McGuffin. Chris and John played key roles in the acquisition of the APS 42 Radar for the North Star aircraft. In 2019 John was approached by Rejean Demers, CASM's project manager for the North Star restoration to see if he could locate the radar unit which was missing from the aircraft as explained below. John was successful and as a result in 2001  Rej asked Chris if  our association  could arrange for the acquisition of the unit. John and Chris coordinated its acquisition and what follows is a very fascinating story about what may be the only unit of its kind still in existence. The authors have been very modest about their contributions in dealing with a very challenging process made more difficult by the pandemic Covid-19.}
+\textit{The article below was written by our members John Makadi and Chris McGuffin. Chris and John played key roles in the acquisition of the APS 42 Radar for the North Star aircraft. In 2019 John was approached by R\'{e}jean Demers, CASM's project manager for the North Star restoration to see if he could locate the radar unit which was missing from the aircraft as explained below. John was successful and as a result in 2001  R\'{e}j asked Chris if  our association  could arrange for the acquisition of the unit. John and Chris coordinated its acquisition and what follows is a very fascinating story about what may be the only unit of its kind still in existence. The authors have been very modest about their contributions in dealing with a very challenging process made more difficult by the pandemic Covid-19.}
 
 The North Star was the RCAF’s first strategic lift platform. It was dispatched across the country, and bridged the Atlantic and Pacific in service to Canada. In the late 1950s, the RCAF began upgrading the fleet with the addition of the APS-42 military navigation/weather radar. This radar was still sensitive equipment in 1966 when North Star 17515 was donated to the Canada Aviation and Space Museum. The radar was stripped out of the airframe along with the radios and other sensitive equipment.
 
@@ -22,7 +22,7 @@ Project North Star is frequently described as an effort to return 17515 to the c
    \vspace{2em}
    \centering
    %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{radar_the_unit.png}
+   \includegraphics[scale=0.45]{radar_the_unit.png}
    %caption of the figure 
    \caption*{\small \em Radar -- The Unit.}
    %label of the figure, which has to correspond to \ref{}:
