--- a/pnsac/newsletter/article_MemberInterview.tex
+++ b/pnsac/newsletter/article_MemberInterview.tex
@@ -5,187 +5,71 @@
 % Head
 
 \title{Our Members}
-\author{This is the edited transcript of an interview with Garry Dupont by Richard Lodge.}
+\author{Richard Lodge.}
 
 \maketitle
 
-\textit{Garry why did you join Project North Star?}
+Last New Year's Eve, December 2021, I became the third past president of PNSAC, after 12 years in the position and following several years at treasurer. I was delighted when Chris McGuffin agreed take on the role of president following the unanimous support of the board of directors.
 
-I joined it when I was working full time and it was a discussion between me and
-my wife as I knew retirement was looming and it was what I was going to do. I
-had seen the article that was in the Ottawa Citizen with Robert Holmgren and Tim
-Timmins requesting people to attend a meeting starting the project, and my wife
-suggested I go to it, which I did and it gave me something to look forward to.
-Even when I was employed I was able to physically contribute by coming in the
-odd day and helping out with special projects and overhaul a few components and
-stuff like that.\\
+Before starting to write this article, I made a list of some of the more important and memorable events of my presidency. This article is my recollection of the things that have stuck in my mind over the years. During my term in office, PNSAC changed from being an experimental volunteer organization which still had to prove itself to the Canadian Aviation and Space Museum (CASM), to being part of the CASM family where PNSAC members are well respected and trusted by the museum staff and management.
 
-\noindent\textit{So you worked only in the engine shop?}
+Several events stand out when I think about my years as president. The first was on Canada Day 2017 shortly after R\'{e}j Demers had arrived at CASM to take over the position of Special Project Manager. The ex RCAF Hercules C130 had arrived in April 2016 and was parked on the apron outside the Storage Hangar.  A large crowd gathered around the aircraft when the day was at its it hottest.  Standing in the middle of the cargo ramp was R\'{e}j where for half an hour or so he entertained the crowd.  The event was unplanned, and his comments were unscripted. The crowd just stood there enjoying the informality of listening to what he was saying and answering questions shouted to him.
 
-No.  When initially I was working, I worked on various other things and only
-after I fully retired, I showed up and said Mike Irvin "I am here. I'll be here
-for four days a week".  That's when he asked me to go into the engine shop
-because they needed help in there.\\
+The second event was in December 2019 when Engine \#4 was moved from the Engine Shop to be located in front of the North Star in the Storage Hangar. It was a cold early winter day with snow flurries. On this occasion the engine could only be moved on its stand which had four wheels and no steering. It was towed by R\'{e}j driving CASM's forklift from the staff parking lot along the side of the building and into the Storage Hanger. It was a very slow process taking something like half an hour. By the time we got the engine safely to bed the three engine shop volunteers (me, Garry Dupont, and Charles Baril) as well as other volunteers who were walking behind the engine were really not enjoying the beginning of a Canadian winter. R\'{e}j who was sitting in the heated cab of the forklift, with a nice smile on his face, was actually quite warm! 
 
-\noindent\textit{Could you have worked anywhere but you chose to work in the engine shop?}
+\begin{figure}[H]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.75]{engin_4.png}
+   %caption of the figure 
+   \caption*{\small \em From left to right: Garry Dupont, R\'{e}j Demers (in the cab), and Chris McGuffin.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:img1}
+\end{figure}
 
-Actually, Mike chose for me.  Mike was the one who said go to the engine shop.\\
 
-\noindent\textit{When you started with Project North Star would you have felt
-that you had most experience of aviation work on engines, or could you gone
-anywhere on the plane?}
+The next event was when I was MC at the showing of the film  made in 2014 when the  Lancaster bomber, part of the collection of the Canadian Warplane Heritage Museum, flew to England to join the only other airworthy Lancaster in the world for a summer tour of the airshows in Britain. The epic flight was filmed throughout its three-day journey to England, during its time in England and on its return.  Bill Tate, one of our very active members, arranged for the film to be shown in the auditorium of the CASM to about 250 members of the general public.  The film itself was very interesting, but what made it even more interesting was that the flight crew agreed to come to Ottawa and talk to the audience after the showing of the film.  Hearing the flight crew talk of the preparations and difficulties of the tour and knowing how successful it had been was particularly interesting to me.  I had managed to attend the first airshow in England when the two Lancasters, a Hurricane and two Spitfires had flown together off the south coast of England, near where they would regularly pass on bombing missions during World War 2. The sound of 11 Merlin engines flying together reminded me of my boyhood in England when I would hear the bombers leaving their bases in Yorkshire to bomb Germany – quite an emotional sound all these years later.
 
-I could have gone anywhere on the plane. Of this particular engine I had no
-knowledge. I had never worked on these liquid cooled engines before.  I never
-worked on a piston engine of that size before and actually I hadn't worked on
-piston engines for quite a number of years because with my employment most of my
-airplanes were with turbines.  We had some small piston engined airplanes of
-which I had limited experience.\\
+There are always difficulties and problems to deal with when one is the head of any organization, be it in a paid position or as a volunteer.  PNSAC has experienced a  number of challenges during it existence.  We have had two major closures and a lock down and closure caused by the Covid 19 pandemic.  The Covid 19 closure needs no explaining but the previous two were necessitated by CASM staging major events in 2013 and 2016 around the Storage Hangar.  While the closures were disruptive to the Project North Star operations, the presentation of the Star Wars and Star Trek exhibits allowed CASM to reach a broader audience and raise awareness of CASM. The exhibits made it impossible for the restoration team to work on the North Star aircraft for many weeks in both years.  The challenge was to try to keep the restoration volunteers together when some volunteers were finding other ways to occupy their time.  Many meetings and discussions took place, and another side of my role was to help the restoration volunteers understand that these closures were only temporary and that as soon as the spectacle events were finished, restoration work would start on the aircraft again.  Fortunately, we did not lose many restoration volunteers although our actual non-volunteer membership dropped considerably.
 
-\noindent\textit{So quite a bit of your work in the engine shop was a learning
-experience apart from learning about how the Merlin 622 was assembled, you were
-also learning a bit about actually working on a large piston engine aircraft?}
+During the summer of 2018 it was decided that the vertical fin of the North Star should be removed.  This involved weeks of preparatory work inside the aircraft, loosening the many nuts and bolts securing the fin to the aircraft.  On the appointed day a large mobile crane arrived to remove the vertical fin. The rental cost was financed by PNSAC donations received from members.  It was a hot day, and the crane was duly stationed beside the aircraft.  However, several of the securing bolts had been left in place and needed to be removed once the crane had been attached to the fin.  Several volunteers assisted in the attaching of the crane hook to the fin, but one volunteer, Charles Baril, offered to crawl inside the plane and remove the last remaining bolts.  The inside of the plane was like an oven with no ventilation and no proper lighting. The only way Charles could communicate with the crew outside was by shouting.  After about an hour of very difficult work, Charles shouted that all the nuts and bolts had been undone and the actual lifting of the fin could proceed.  After the fin had been lifted by the crane, it was lowered into a specially prepared cradle. Charles emerged from the aircraft to the applause of all people outside, looking as if he was about to melt and thoroughly tired out by his exertions.
 
-That's correct and the systems on this particular engine were completely
-different from anything I had ever worked on and I came across  an RCAF training
-manual, which somebody had donated and I took it home and read it from one end
-to the other over a couple of weeks. I was able to learn a considerable amount
-about the engine and understand the systems and it started making sense to me,
-so when you start assembling and disassembling and you look at a line you know
-what that the line is for. You know what the electrical connections are for. You
-know what system they belong to so it makes that part of the process much
-easier.\\
+\begin{figure}[H]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{nstar_tail_fin.png}
+   %caption of the figure 
+   \caption*{\small \em The North Star with its tail fin removed.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:img1}
+\end{figure}
 
-\noindent\textit{I know from when we first started working together, you said
-you worked for Perimeter Airlines in Winnipeg.  When you were working for
-Perimeter, you were working mostly on Metroliners. Correct?}
+ As president, I was involved in several other memorable events organized by Bill Tate.  Bill has an amazing ability to organize events and had a substantial list of contacts.  I was primarily involved as the MC of the trips while in the buses, also providing a backup for Bill should he encounter any problems.  Twice we visited RCAF Trenton and once we went to Montréal and Mirabel to see the Canadair/Bombardier production line in action. The most memorable was the weekend bus trip to Hamilton to attend the airshow organized by the Canadian Warplane Heritage Museum on the Saturday and on the Sunday, a visit to the Air Canada control centre in Toronto. On the Friday evening, Bill organized a visit to the vineyards in Niagara-on-the-Lake. Sunday morning saw us all back in the bus heading for downtown Toronto, where we breakfasted in the brewery district before our Air Canada visit.   Many members will have great memories of these times, which all took place prior to the closures I referred to earlier in this article. 
+ 
+\end{multicols}
 
-Yes.  We had 2 Metroliners when I was there, but we also had 4 piston operated
-Beechcraft Queenairs, we had 6 other Beechcraft.\\
+\begin{figure}[H]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.4]{july2012.png}
+   %caption of the figure 
+   \caption*{\small \em Hamilton trip.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:img1}
+\end{figure}
 
-\noindent\textit{When you worked at Perimeter, were you working on any part of
-the plane and you weren't specialising in any particular part, so moving into
-solely engines was really a new area of work for you?}
+\begin{multicols}{2} 
 
-That's correct.\\
+One of the best aspects of assuming responsibility as a volunteer is that the more one puts into it, the more pleasure and interest one gets from the work.  As president, I regularly met all the senior management of CASM and many other people outside CASM.  Often, I was involved in discussions about the future direction of PNSAC, which of course involved discussing future and sometimes confidential CASM plans and operations.  
 
-\noindent\textit{When you first started working in the engine shop, who were you
-working with?}
+A very small incident, probably four or five years ago, really demonstrated to me how as a volunteer association we had "arrived".  My predecessor presidents, Bob Holmgren and Tim Timmins had to overcome the skepticism of CASM management as to whether it would be possible for us to sustain a continuing volunteer effort.  By the time I became president in 2010, CASM management had accepted that our members would work to a very high standard of restoration work and would continue to put in several thousand hours of painstaking and sometimes difficult work every year.  The incident I am remembering best is a particular day when I went upstairs to the office level  at CASM and saw a group of CASM staff talking in the corridor.  I stopped and said hello to them and then started to excuse myself by saying that they were having a discussion and I would get out of the way.  Chris Kitzan, the CASM Director General, looked at me and said "There was no need to go away Richard, you are part of the family".  This for me was a watershed moment and one I shall always appreciate.
 
-There was Ted Devey, John Tasseron, Michel Lacasse and two other
-fellows, the names escape me.\\
+Looking towards the future, as the pandemic begins to be contained, we must get the restoration operation going again and try to recruit more members and restoration volunteers.  I feel very confident that Chris McGuffin and the other directors of PNSAC will be able to do this and continue to help CASM in volunteer work in addition to North Star restoration.  I look forward to continuing volunteering, but definitely not climbing around the top of the aircraft in a full safety harness!  
 
-\noindent\textit{I asked a few minutes ago.  If you were only interested in
-working on the engines.  Where else would you like to work on the plane? So you worked only in the engine shop?}
 
-Anything actually, I don't do well with sheet metal work, I have done some,
-minor bits. I could develop those skills a bit better.  Hydraulic systems; I
-have a fairly good interest in, landing gear, the flaps, the hydraulics and all
-those systems.  I have learned where the pumps are and how all that works now.
-I have also read up little bit on the landing gear to understand it a bit better
-and how it works and that would be interesting.\\
-
-\noindent\textit{So you could, if they had been doing the landing gear at the
-time you started have been quite interested in working on that side of things?}
-
-Yes.\\
-
-\noindent\textit{What would you say in retrospect was the most difficult part of
-the work you were having to do on engines 3 and 4?  Was it lack of paperwork,
-was it corrosion or what was it?}
-
-The most difficult part was dealing with corrosion because of the amount of
-corrosion in the engine and also the decision-making between my career and what
-I would do and what the museum wanted in restoration. The hardest learning part
-was learning about restoration and how to do it properly. I have had some good
-mentors.  and I have learned fairly well on what is required to do and what to
-look forward to in the future when planning the project; how to tackle it from a
-restoration perspective rather than a maintenance perspective.\\
-
-\noindent\textit{Was Mike Irvin one of your mentors helping you to know the
-various procedures needed for restoration?}
-
-Yes, Mike was the main mentor.  He was the one that took me under his wing and
-showed me the requirements and the basis of doing restoration.\\
-
-\noindent\textit{When you started working there, you weren't really in charge of
-the engine because it was a combination of you and Ted Devey who was still
-working there and who had worked on engines 1 and 2.  So you were working with
-him under Mike Irvin?}
-
-Yes.  That's right.\\
-
-\noindent\textit{You feel one of the most difficult parts was to make the shift
-from keeping an aircraft flying to restoring and conserving everything?}
-
-That's right, yes.\\
-
-\noindent\textit{Having done that and got into that sort of mindset, what would
-you feel was the most difficult part of doing the engine, of restoring the
-engines that you had to be involved with, or you had to work with.  Which part,
-I am thinking of?}
-
-The biggest part with the engines was the cleaning.  Believe it or not, the
-engines and the old oil had been sitting there for 35 years, it was very
-congealed and very difficult to remove.  Cleaning with solvents is not a
-pleasant thing to do and that was about the only method we could use was to
-clean and put it in the parts washer.  Once you put a part in the parts washer
-you also had to be very careful because if it was steel, when it was removed
-from the part washer it would flash freeze almost immediately, so it had to be
-removed and treated straightaway with some sort of preserving oil to prevent the
-surface from oxidizing.\\
-
-\noindent\textit{I very much remember John Tasseron working on the pistons and
-all work of getting the pistons out of the block  and then John working on the
-cleaning the piston rings.  Were you very much involved in that side of things?}
-
-Yes.  Cleaning up the piston rings was a real tedious job where you could spend
-a whole week on one piston ring trying to free it up by scraping away the
-corrosion, by tapping it to free the rings.  Sadly, a lot of them broke.  There
-was nothing we could do to free them up.  We tried various chemicals, soaking
-procedures, vibration procedures, putting them in sonic cleaners so that the
-vibration would free up the dirt, but nothing seemed to work really well, except
-getting in there with a little scraper and trying to scrape them clean.\\
-
-\noindent\textit{And when you did manage to free the parts and get them clean,
-you couldn't use a glass bead machine to do any cleaning because the parts were
-aluminum so we had to use Scotch Brite and other things to clean them?}
-
-Correct.  The purpose of glass beading is to remove corrosion and not to clean.
-If you glass bead a surface, it changes the outer texture of it considerably. In
-the engine shop we had at Perimeter, the only time they used glass beading was
-for removing the outside surface of the engine block and then they could prepare
-it for painting.\\
-
-\noindent\textit{Now that you have finished the main part of the work on engines
-3 and 4, what are the main additional parts or work still to be done on engines
-3 and 4 and maybe on engines 1 and 2?}
-
-R\'{e}j [Demers] wants to remove the engines so we will reinstall engine 4 when
-it is ready and then we will go back and will work on each engine successively
-and then work on the firewall and behind the firewall with the engine removed.
-At the time when we do this we will inspect the engines to see if corrosion has
-come back in some areas and I notice on some of the engines during Canada Day
-when we removed parts and cowlings to display the engine that there was
-corrosion showing up in certain areas where it had not been treated properly.
-So when we remove the engines, and R\'{e}j agrees with me, we will put them back
-in the engine shop and go over them thoroughly.  We have also found some issues
-with some of the cowl parts just not being adjusted properly.  So in the end, I
-would like to have all four engines installed on the wings properly treated so
-that we don't have to worry about them again and also the cowls adjusted and
-done properly so that at any time we can remove the cowl parts and reinstall
-them with ease.  So that in the future, if you want to display the engine again,
-you could effectively remove all the cowls on all four engines with ease and
-then reinstall them without making any big issue of it.\\
-
-\noindent\textit{Effectively you have got to remove any distortions in the cowl
-panels. So those are the things to be done?  When you are finished working on
-the Merlin engines, what would you like to do?  This is purely a personal thing
-and nothing to do with the Museum.  More engines on a different plane or working
-on the airframe?}
-
-It really doesn't matter to me, whatever the Museum sees fit as a project, I am
-willing to tackle it. 
 
 
 % \end{multicols}
