--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -20,7 +20,7 @@ My timing lined up with Project North Star, a comprehensive restoration effort: 
 
 Initially, I was assigned to reproduce and restore the wood paneling that lined the interior of our North Star. Occasionally I helped with other assignments. I watched as replacement parts were fabricated, engine \#4 was reassembled and bird nests were pulled out of the tail section. In 2018 I began publishing progress and event updates on the Project Facebook and Instagram pages. Many people enjoy seeing airplanes up close. Airshows are popular for good reasons. I certainly look forward to the time I spend at the aviation museum, particularly the areas normally hidden from public view. Taking a few photos to share with our social media audience was a natural fit for me. Those updates have been few during the pandemic but they will resume imminently.
 
-2022 is going to be a year of renewal in many ways. In January I assumed the presidency of the Association. Our previous president, Rodger Lodge, held the position for nearly 12 years. Roger has been involved with the Association for 20 years and I am thankful that he has agreed to stay on the Board of Directors. The Canada Aviation and Space Museum is actively renovating the conservation workshop. Plans for a return of volunteers to the Museum are being developed and restoration activity should resume in the months ahead. I am grateful for the encouragement of our supporters and the tenacity of our volunteers. We'll be back to the restoration effort soon. 
+2022 is going to be a year of renewal in many ways. In January I assumed the presidency of the Association. Our previous president, Richard Lodge, held the position for nearly 12 years. Richard has been involved with the Association for 20 years and I am thankful that he has agreed to stay on the Board of Directors. The Canada Aviation and Space Museum is actively renovating the conservation workshop. Plans for a return of volunteers to the Museum are being developed and restoration activity should resume in the months ahead. I am grateful for the encouragement of our supporters and the tenacity of our volunteers. We'll be back to the restoration effort soon. 
 
 
 \begin{footnotesize}
