--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -14,93 +14,22 @@ Canada Aviation \& Space Museum}
 
 %\section{Zen and the Art of Aircraft Restoration.}
 
-When touring the shops in the Museum's Conservation wing, the engine shop is
-reserved for what is referred to as, the "Crown Jewel". Guests are lead through
-the corridor and the lights are flicked on to reveal a shining piece of
-aeronautical engineering and craftsmanship. The Merlin 622 engine, one of four
-such power plants, sits resplendent. Gasps and expressions of delight from
-guests are guaranteed to insight a prideful glance upon this piece of work by
-volunteers and staff alike. Appearing as if the engine had just been delivered
-from Bristol Aero Ltd. is an illusion. What is this strange magic? How can such
-beauty manifested though steel and aluminum even exist? As any good sorcerer
-will tell, illusion is lost upon the dissolution of mystery. Yet this piece of
-work, a restoration of great effort, time and detail, cannot shed the cloak of
-timelessness so easily. The result of thousands of hours culminate through
-unrelenting intrigue, garnered by all who cast eyes upon the Merlin. These
-words simply scatter as embellishments to the enduring design and purpose,
-which cannot be hidden in all evidence of its greatness. 
+National Volunteer Week was held recently. It was a timely call to action. Let's focus our collective strengths and resources to prepare for Project North Star RESTART 2022. 
 
-Referencing an Ottawa Citizen article dated Saturday Feb. 1st, 2003. We read of
-an effort to restore the Canadair North Star to a version of her "former self"
-as PNSAC founder Robert Holmgren put it. A sad, sorry state at the time.
-Destitute to serve as a bird house to the starlings. No mention of any spells
-enacted to summon the aviation gods or mojo hand placed upon the yoke to stir
-the spirits which have tilled the air.  Yet today, she's a Hangar Queen,
-patiently awaiting final installation of engine \#4. Is this sorcery? No,
-simply the fourth iteration of the Project's labour of love; Rolls-Royce Merlin
-622, Serial \#309573. The task of accomplishing the finale to a four part, long
-haul repeat restoration of a power plant began in 2014. Looking back at power
-plant restoration cycles, we see the evolution of the Project North Star
-volunteer organization since the early 2000's. The forming of Engine Shop crews
-and the establishing of Crew Chiefs. The coordination of daily grunt work of
-condition recording, treatment and reassembly of components. Today, members of
-the project continue to develop ideas, adapting to new technology, finding
-different approaches and maintaining a solid work ethic. This spirit remains
-unchanged throughout difficult times and challenges we have encountered. 
+It has been roughly 20 years now, since the beginning of the North Star restoration project. Over the past two years, we've had to endure the effects of the CoVID-19 global pandemic. This spring, we have an opportunity to make an attempt to (gradually) return to normal operations. Ingenium is currently initiating actions that will permit the return of Project North Star volunteers. This will require a concerted effort on behalf of all stakeholders. 
 
-The Tech. log states: Engine installed on North Star 17515 on August 23rd, 1965
-at airframe Total Time of 19845.45 Hrs. with 1121 hours remaining in \#4
-position (4th to the right). The engine had previously flown on 17514 until
-April 30th, 1965 when a broken intake valve \@ \#1 cylinder, "B" bank
-necessitated a repair. Flipping through pages, various signatures, authorities,
-stamps and markings show evidence of a storied service life going back to 1948.
-Engines are shared among power plant "skeletons" which in turn, are shared
-across the fleet. This was one of the major design features of the "Power Egg"
-as the promotional material of the day had put it, interchangeability and ease
-of maintenance. A glance at the log tells me this engine serial number served
-on North Stars 506, 510, 508 and 502 to name a few. The last remaining example
-of its type, North Star 17515 holds pieces of the past, belonging to aircraft
-that have long been gone. Like crew members who have also shared their time
-amongst a fleet that traveled all over the globe, with change-overs,
-turn-arounds and plenty of distance in-between.  
+My intent is to have crews receive training, gradually integrating in numbers, until we could finally support full daily compliments based on operational capacities. Now, with the demands imposed by Ingenium's recent acquisition approval of an RCAF CC-115 Buffalo, we must act upon this news in conjunction with a collection re-org. This signifies an earlier than expected requirement for Project North Star volunteer support, due to the increased scope of work. 
 
-One of the big pay-offs for members of Project North Star is the opportunity to
-display the work carried out by volunteers. Many occasions come to mind, such
-as Canada Day, Doors Open Ottawa and family visits to the Museum. One
-opportunity, of which I will always be grateful to have participated in, was
-such a moment. Myself and a few volunteers met a retired employee of the
-aforementioned Bristol Aero Industries Ltd. who worked at the overhaul shops
-when this engine was undergoing acceptance runs in the early to mid-sixties.
-Quickly, job experience and familiarity with the object was brought forward. A
-quick look under the cowling to reveal preserved markings and decals, evidence
-of original repair shop work was pointed out. "I probably worked on that job"
-he said. I understood at this point, how someone's work, preserved in such a
-way, could be of intangible value. The history coming around full-circle before
-my eyes, as the gentleman pointed out the ROLLS-ROYCE cast upon the rocker
-covers, saying "it was one of my first jobs, painting on those red letters". 
+CASM Conservation is preparing a work schedule reliant upon this volunteer support, in order to mobilise the North Star from the Reserve Hangar.  Moving forward, through consultations with all parties, obtaining guidelines and limitations, as well as setting goals and expectations so that we may provide an integrated work plan for 2022-2023. 
 
-These records, object qualities, historic log entries and our treatment reports
-all add up. We string together these bits of information to form longer chains
-that communicate the history of an artifact. As focal points shift towards
-other areas of interest, or priorities, work carried out in the past helps
-maintain a continued relevance for others to pick-up where we left off. With
-such a long term project, setting the pace is just as important as taking a
-break now and then. Knowing that we had an impact and remembering the
-experiences we've shared can carry us through new challenges. It's a pleasure
-for me to observe a new volunteer work towards acquiring the skills that may be
-passed on to others, like an old wizard speaking to his young apprentice. 
+High on our list of immediate concern is rendering 17515 mobile so that we may conduct a massive hangar shuffle. Collection objectives are driving CASM Conservation Services (and Project North Star) into a 24 month action plan which will eventually see us dispose of some artifacts and acquire one big yellow beast (115452). Thankfully, I have been able to secure accommodation within the storage hangar for the North Star between brief stints outdoors during fair weather movements, in amongst the storage hangar and the main museum. 
 
-I encourage Project North Star members to communicate their interest in the
-project to the public. Generate their own records that may contribute to the
-history of the machine and the lives it affected. This newsletter, social media
-and other forms of reaching out to the public are excellent ways to remember
-one of Canada's great contributions to air transport. With the tools at our
-disposition, I would not hesitate to believe we can create many new and
-engaging experiences for the public to learn about the role this aircraft
-undertook while in service. Now, in continuation with a sense of national
-pride, the North Star remains an important platform for interpretation of the
-work carried out by dedicated volunteers supported by a museum that understands
-the value of such an artifact. 
+Project North Star has an important role in reinvigorating the museum ecosystem, providing a necessary boost of youthful vigour and effervescence. You may be asking yourself if during this prolonged absence, a time machine or temporal portal was made available for us to return to a simpler time, a golden age of aviation perhaps? Disappointingly, such a device has not yet surfaced beyond the top secret labs of the NRC. We must rely upon more tangible resources, such as students, cadets and young urban professionals. Diversification and integration of alternative human resources are being tapped, like springtime sugar maples.
+
+It's been a long winter, or two. Attempts to grasp fleeting moments of human connection leave us questioning what sort of catharsis may be obtained from a grocery store checkout aisle. I myself, have taken steps towards awkward avenues of discussion by making cold-calls to random organizations which may prove to be valuable partners in the advancement of the project. Recognizing the North Star as an important platform for discussion and broadening the scope of Canadian heritage interpretation. 
+
+With this recent streak of renewal, and a strong and healthy relationship, Project North Star and in turn, Ingenium may remain viable organizations as we continue our recovery. I look forward to hearing back from everyone, so that we may set a date for Project North Star RESTART 2022.
+
 
 \begin{footnotesize}
   \raggedleft PNSAC\\
