--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -50,7 +50,7 @@
 
 \volume{18} % \volnumber{1}
 \issue{1}
-\date{April 2022} 
+\date{May 2022} 
 \titlepage
 
 %\centerline {\Large \textit {Celebrating the 70th Anniversary of the First
@@ -86,11 +86,11 @@
 % Progress report ................................................... %
 
 % Report
-% \begin{article}
-% 	\input{article_ProgReport} 
-% \end{article}
+\begin{article}
+	\input{article_ProgReport} 
+\end{article}
 
-\pagebreak
+% \pagebreak
 
 % Member interview ................................................... %
 
